2008-12-15  Don Porter	<dgp@users.sourceforge.net>

	TIP #338 IMPLEMENTATION

	* doc/Tk_Main.c:	Removed the last two '#include "tclInt.h"'.
	* generic/tkMain.c:	Tk is now limited to Tcl's public interface.
	* macosx/tkMacOSXInit.c:

2008-12-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/demos/fontchoose.tcl: Simple fontchooser demo
	* library/demos/widget:

2008-12-11  Jan Nijtmans  <nijtmans@users.sf.net>
	* generic/tk3d.c:    Make error message from Tk_GetRelief the
	                     same as for Tk_GetReliefFromObj
	* tests/canvas.test  Adapt test cases for changed error message
	* tests/scrollbar.test
	* tests/textTag.test

2008-12-11  Joe English  <jenglish@users.sourceforge.net>

	* library/demos/*.tcl: Omit contraindicated [package require Ttk].
	Remove logic that switches [ttk::scrollbar]s to [tk::scrollbar]s
	based on [tk windowingsystem]; this is already handled in
	library/ttk/scrollbar.tcl.

2008-12-10  Daniel Steffen  <das@users.sourceforge.net>

	TIP #324 IMPLEMENTATION

	* generic/tkCmds.c:		Implementation of [tk fontchooser]
	* generic/tkInt.h:		as a Ttk dialog for X11 and as a native
	* win/tkWinDialog.c:		platform dialog on Mac OS X & Windows.
	* win/tkWinInt.h:		(thoyts, vetter, robert, steffen)
	* win/tkWinTest.c:		[Patch 1477426]
	* win/tkWinX.c:
	* macosx/tkMacOSXCarbonEvents.c:
	* macosx/tkMacOSXDialog.c:
	* macosx/tkMacOSXEvent.c:
	* macosx/tkMacOSXEvent.h:
	* macosx/tkMacOSXFont.c:
	* macosx/tkMacOSXFont.h:
	* macosx/Wish.xcodeproj/project.pbxproj:
	* library/fontchooser.tcl (new):
	* library/tclIndex:		
	* library/msgs/de.msg:		
	* library/msgs/en.msg:
	* tests/fontchooser.test (new):
	* tests/winDialog.test:
	* doc/fontchooser.n (new):
	* doc/tk.n:

	* library/console.tcl:		Let user select console font via
					[tk fontchooser].
	* library/demos/text.tcl:	Add [tk fontchooser] demo.

	* generic/tkUtil.c:		Add TkBackgroundEvalObjv() and
					TkSendVirtualEvent() utility functions
					(used by TIP #324 code).
