@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkWinDialog.c,v 1.58 2008/12/10 13:41:19 patthoyts Exp $
+ * RCS: @(#) $Id: tkWinDialog.c,v 1.59 2008/12/16 23:53:14 nijtmans Exp $
  *
  */
 
@@ -2326,7 +2326,7 @@ static Tcl_Obj *
 GetFontObj(HDC hdc, LOGFONT *plf)
 {
     Tcl_Obj *resObj;
-    int len = 0, pt = 0;
+    int pt = 0;
 
     resObj = Tcl_NewListObj(0, NULL);
     Tcl_ListObjAppendElement(NULL, resObj,
@@ -2441,7 +2441,6 @@ HookProc(HWND hwndDlg, UINT msg, WPARAM wParam, LPARAM lParam)
      */
     if (WM_COMMAND == msg && LOWORD(wParam) == 1026) {
 	LOGFONT lf = {0};
-	int iPt = 0;
 	HDC hdc = GetDC(hwndDlg);
 	SendMessage(hwndDlg, WM_CHOOSEFONT_GETLOGFONT, 0, (LPARAM)&lf);
 	if (phd && phd->cmdObj) {
@@ -2680,7 +2679,6 @@ FontchooserShowCmd(
     HDC hdc;
     HookData *hdPtr;
     int r = TCL_OK, oldMode = 0;
-    Tcl_Obj *resObj = NULL;
 
     hdPtr = Tcl_GetAssocData(interp, "::tk::fontchooser", NULL);
 
