@@ -1,3 +1,7 @@
+2008-12-16  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tkWinDialog.c: remove unused variables
+
 2008-12-15  Don Porter	<dgp@users.sourceforge.net>
 
 	TIP #338 IMPLEMENTATION
